Fix z-indexing, needs to be an integer

--- a/css/mini.css
+++ b/css/mini.css
@@ -173,7 +173,6 @@ div#minii {
 }
 
 .miniCharacter {
-    z-index: 1;
     position: absolute;
     width: 24px;
     height: 24px;
